# Recipes-scrapers

./: README.md  pyproject.toml
.github/workflows/: ruff.yml
recipes_scrapers/: file_processing.py  rainbowplantlife.py
tests/: rainbowplanlife_tests.py
